--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             --color-card-bg: #FFFFFF;    /* Clean White */
             --color-text-primary: #212529; /* Dark Grey/Near Black */
             --color-text-secondary: #6C757D; /* Medium Grey */
-            --color-accent: #004A77;     /* DEEP OCEAN BLUE (Updated Theme) */
+            --color-accent: #004A77;     /* DEEP OCEAN BLUE */
             --border-radius: 16px;
             --box-shadow: 0 4px 6px rgba(0, 0, 0, 0.05), 0 1px 3px rgba(0, 0, 0, 0.02);
         }
@@ -41,11 +41,11 @@
             width: 100%;
             max-width: 1200px; 
             
-            /* Desktop Grid: 3 columns */
-            grid-template-columns: repeat(3, 1fr);
+            /* Desktop Grid: 4 columns (Adjusted to allow for a more flexible secondary row) */
+            grid-template-columns: repeat(4, 1fr);
             
-            /* Define explicit row structure for complex layout */
-            grid-template-rows: auto auto; 
+            /* Define explicit row structure */
+            grid-template-rows: auto auto auto; 
         }
 
         /* 3. Card Styling */
@@ -56,13 +56,14 @@
             padding: 24px;
             display: flex;
             flex-direction: column;
-            transition: transform 0.2s, box-shadow 0.2s;
+            transition: transform 0.3s ease-in-out, box-shadow 0.3s;
             border: 1px solid rgba(0, 0, 0, 0.05); 
         }
 
+        /* Card Hover Effect: Scale Up (Zoom) */
         .bento-card:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1);
+            transform: scale(1.02); /* Subtle zoom */
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
         }
 
         /* Card Header/Labels */
@@ -106,12 +107,12 @@
             color: var(--color-accent);
         }
 
-        /* 4. Desktop Grid Span Definitions */
+        /* 4. Desktop Grid Span Definitions (ADJUSTED FOR 4 COLUMNS) */
 
-        /* Card 1 (Profile): Large box (2x1) */
+        /* Card 1 (Profile): Large box (3x1) */
         .card-profile {
-            grid-column: span 2;
-            grid-row: span 1;
+            grid-column: span 3;
+            grid-row: 1 / 2;
         }
         .card-profile h1 {
             font-size: 2.5rem;
@@ -128,12 +129,12 @@
 
         /* Card 2 (Location): Small box (1x1) */
         .card-location {
-            grid-column: 3 / 4;
+            grid-column: 4 / 5;
             grid-row: 1 / 2;
             justify-content: space-between;
         }
 
-        /* Card 3 (Tech Stack): Medium box (1x1) */
+        /* Card 3 (Subjects): Medium box (1x1) */
         .card-tech-stack {
             grid-column: 1 / 2;
             grid-row: 2 / 3;
@@ -151,9 +152,10 @@
         }
 
 
-        /* Card 4 (Case Study): Medium box (1x1) */
+        /* Card 4 (Case Study): Medium box (2x1) */
+        /* Span 2 columns to make room for the two new small cards */
         .card-case-study {
-            grid-column: 2 / 3;
+            grid-column: 2 / 4;
             grid-row: 2 / 3;
             background-color: var(--color-accent); 
             color: #FFFFFF;
@@ -168,13 +170,25 @@
             color: rgba(255, 255, 255, 0.85);
         }
 
-        /* Card 5 (Hobby): Small box (1x1) */
-        .card-hobby {
-            grid-column: 3 / 4;
+        /* Card 7 (Reflection): NEW CARD (1x1) - Placed next to Hobby */
+        .card-reflection {
+            grid-column: 4 / 5;
             grid-row: 2 / 3;
+            background-color: rgba(0, 74, 119, 0.05); /* Very light accent background */
+        }
+        .card-reflection .card-content p {
+            font-size: 0.95rem;
+            color: var(--color-text-primary);
+        }
+
+        /* Card 5 (Hobby): Small box (1x1) -- Moved to the third row */
+        .card-hobby {
+            grid-column: 1 / 2;
+            grid-row: 3 / 4;
             align-items: center;
             text-align: center;
             justify-content: center;
+            padding: 16px; /* slightly smaller padding for the small card */
         }
         .card-hobby .card-content {
             margin-top: 0;
@@ -183,9 +197,9 @@
             font-size: 1.3rem;
         }
 
-        /* Card 6 (Playlist): Wide box (3x1) - Placed in a separate final row for clean layout */
+        /* Card 6 (Playlist): Wide box (3x1) -- Now spanning 3 columns in the third row */
         .card-playlist {
-            grid-column: span 3;
+            grid-column: 2 / 5;
             grid-row: 3 / 4; 
             min-height: 100px;
         }
@@ -228,9 +242,9 @@
             </div>
             <hr style="margin: 15px 0; border: 0; border-top: 1px solid rgba(0, 0, 0, 0.05);">
             <div class="social-links">
-                <a href="#">LinkedIn</a>
-                <a href="#">GitHub</a>
-                <a href="#">UMT Portal</a>
+                <a href="#" target="_blank">LinkedIn</a>
+                <a href="a href=”https://github.com/peachyrinzz" target="_blank">GitHub</a>
+                <a href="#" target="_blank">UMT Portal</a>
             </div>
         </div>
 
@@ -238,7 +252,7 @@
             <div class="card-label">Current Location</div>
             <div class="card-content">
                 <h2>UMT, Kuala Nerus</h2>
-                <p>10:58 AM MYT</p>
+                <p>11:17 AM MYT</p>
             </div>
         </div>
 
@@ -262,6 +276,14 @@
             </div>
         </div>
 
+        <div class="bento-card card-reflection">
+            <div class="card-label">Food Tech Reflection</div>
+            <div class="card-content">
+                <h2>Why Food Tech Matters in Malaysia</h2>
+                <p>Sustainable food security is crucial for our future. By optimizing local processing methods, we can reduce waste and improve nutrition.</p>
+            </div>
+        </div>
+
         <div class="bento-card card-hobby">
             <div class="card-label">Campus Activity / Hobby</div>
             <div class="card-content">
@@ -275,6 +297,7 @@
             <div class="card-content">
                 <h2>Lo-fi Beats for Late-Night Revision</h2>
                 <p>Placeholder for a music player widget (Spotify or YouTube embed).</p>
+<iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/track/1DmW5Ep6ywYwxc2HMT5BG6?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
             </div>
         </div>
     </div>
